Daniel putting his changes that he forgot to commit (minor things)

--- a/LatticeOptics/latticeOpticsv5/LatticeOpticsV5.bib
+++ b/LatticeOptics/latticeOpticsv5/LatticeOpticsV5.bib
@@ -1,4 +1,20 @@
-
+@article{Greif2013,
+abstract = {Quantum magnetism originates from the exchange coupling between quantum mechanical spins. Here, we report on the observation of nearest-neighbor magnetic correlations emerging in the many-body state of a thermalized Fermi gas in an optical lattice. The key to obtaining short-range magnetic order is a local redistribution of entropy, which allows temperatures below the exchange energy for a subset of lattice bonds. When loading a repulsively interacting gas into either dimerized or anisotropic simple cubic configurations of a tunable-geometry lattice, we observe an excess of singlets as compared with triplets consisting of two opposite spins. For the anisotropic lattice, the transverse spin correlator reveals antiferromagnetic correlations along one spatial axis. Our work facilitates addressing open problems in quantum magnetism through the use of quantum simulation.
+Fermionic Quantum Magnetism
+Optical lattices loaded with cold atoms have been used successfully as quantum simulators of condensed matter systems; however, in the case of fermionic quantum magnetism, achieving low enough temperatures has been a major obstacle. Greif et al. (p. 1307, published online 23 May; see the Perspective by Porto) selectively tuned the exchange interactions in an optical lattice of fermions, forcing a redistribution of entropy such that in the low-entropy subsystem the effective temperature was sufficiently low enough to lead to magnetic correlations.},
+author = {Greif, Daniel and Uehlinger, Thomas and Jotzu, Gregor and Tarruell, Leticia and Esslinger, Tilman},
+doi = {10.1126/science.1236362},
+issn = {0036-8075, 1095-9203},
+journal = {Science},
+language = {en},
+month = jun,
+number = {6138},
+pages = {1307--1310},
+title = {{Short-Range Quantum Magnetism of Ultracold Fermions in an Optical Lattice}},
+url = {http://www.sciencemag.org/content/340/6138/1307 http://www.ncbi.nlm.nih.gov/pubmed/23704375 http://www.sciencemag.org/content/340/6138/1307.full http://www.sciencemag.org/content/340/6138/1307.full.pdf},
+volume = {340},
+year = {2013}
+}
 @article{Kollath2006,
 author = {Kollath, C. and Iucci, A. and McCulloch, I.P. and Giamarchi, T.},
 file = {:C$\backslash$:/Users/anton/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Kollath et al. - 2006 - Modulation spectroscopy with ultracold fermions in an optical lattice.pdf:pdf},
